--- a/app/src/main/res/drawable/background_edittext.xml
+++ b/app/src/main/res/drawable/background_edittext.xml
@@ -3,6 +3,6 @@
     android:shape="rectangle">
 
     <corners android:radius="5dp"/>
-    <solid android:color="@color/md_theme_primary"/>
+    <solid android:color="#1A1C23"/>
 
 </shape>
