--- a/app/src/main/res/layout/card_item.xml
+++ b/app/src/main/res/layout/card_item.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="60dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardElevation="8dp"
     app:cardCornerRadius="8dp"
     android:layout_marginVertical="8dp"
     android:layout_marginHorizontal="8dp">
@@ -14,29 +13,28 @@
         android:layout_marginStart="12dp"
         android:layout_marginVertical="12dp"
         android:orientation="vertical">
-        
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
             android:orientation="horizontal">
 
+            <CheckBox
+                android:id="@+id/checkBox"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
             <TextView
                 android:id="@+id/textViewNameList"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Nome"
+                android:text="Item"
                 android:textSize="20sp"
                 android:textStyle="bold"/>
 
         </LinearLayout>
 
     </LinearLayout>
-
-    <ImageButton
-        android:id="@+id/btnOptionsList"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="end" />
 
 </com.google.android.material.card.MaterialCardView>
