--- a/app/src/main/res/layout/activity_view_itens.xml
+++ b/app/src/main/res/layout/activity_view_itens.xml
@@ -11,11 +11,11 @@
         android:id="@+id/textViewNameList"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="64dp"
         android:layout_marginTop="32dp"
         android:text="Nome da lista"
         android:textSize="20dp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -23,8 +23,8 @@
         android:id="@+id/btnBack"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="39dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="32dp"
         android:src="@drawable/arrow_back"
         android:background="?attr/selectableItemBackgroundBorderless"
         app:layout_constraintStart_toStartOf="parent"
@@ -51,6 +51,8 @@
         android:textColor="#FFFFFF"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="32dp"
+        app:icon="@drawable/add"
+        app:iconTint="@color/md_theme_onPrimary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
