--- a/app/src/main/res/layout/bottom_sheet.xml
+++ b/app/src/main/res/layout/bottom_sheet.xml
@@ -33,6 +33,6 @@
         android:layout_marginTop="10dp"
         android:layout_marginBottom="12dp"
         android:text="Adicionar"
-        android:textColor="@color/md_theme_onPrimary"/>
+        android:textColorHint="@color/md_theme_onSecondary"/>
 
 </LinearLayout>
