--- a/app/src/main/res/layout/activity_add_list.xml
+++ b/app/src/main/res/layout/activity_add_list.xml
@@ -68,6 +68,7 @@
         android:layout_marginBottom="32dp"
         android:layout_marginHorizontal="30dp"
         android:text="Criar"
+        android:textColor="@color/md_theme_onBackground"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
