--- a/app/src/main/res/layout/bottom_sheet.xml
+++ b/app/src/main/res/layout/bottom_sheet.xml
@@ -3,11 +3,12 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:backgroundTint="@color/material_on_surface_stroke">
 
     <com.google.android.material.bottomsheet.BottomSheetDragHandleView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textInputLayoutNewItem"
@@ -34,6 +35,6 @@
         android:layout_marginTop="10dp"
         android:layout_marginBottom="20dp"
         android:text="Adicionar"
-        android:textColor="@color/md_theme_onBackground"/>
+        android:textColor="@color/md_theme_onSurface"/>
 
 </LinearLayout>
