--- a/app/src/main/res/layout/card_list.xml
+++ b/app/src/main/res/layout/card_list.xml
@@ -5,7 +5,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="8dp"
     android:layout_marginVertical="8dp"
-    android:layout_marginHorizontal="8dp">
+    android:layout_marginHorizontal="8dp"
+    android:backgroundTint="@color/material_on_surface_stroke"
+    app:strokeWidth="0dp">
 
     <LinearLayout
         android:layout_width="wrap_content"
