--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -47,6 +47,6 @@
         <item name="colorSurfaceContainerHigh">@color/md_theme_surfaceContainerHigh</item>
         <item name="colorSurfaceContainerHighest">@color/md_theme_surfaceContainerHighest</item>
         <item name="fontFamily">@font/poppins</item>
-        <item name="android:windowBackground">#14161B</item>
+        <item name="android:windowBackground">#121212</item>
     </style>
 </resources>
