--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,6 +16,7 @@
         android:text="Minhas Listas"
         android:textSize="25sp"
         android:textStyle="bold"
+        android:textColor="@color/md_theme_onSurface"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -24,8 +25,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="8dp"
-        android:src="@drawable/arrow_back"
+        android:layout_marginEnd="16dp"
+        android:backgroundTint="@android:color/transparent"
+        android:padding="0dp"
+        android:src="@drawable/person_outline"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -46,10 +49,40 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Nova Lista"
-        android:backgroundTint="@color/md_theme_onError"
-        android:textColor="@color/md_theme_onSurface"
+        android:backgroundTint="#001FF6"
+        android:textColor="#FFFFFF"
+        app:icon="@drawable/add"
+        app:iconTint="#FFFFFF"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="32dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+        android:id="@+id/btnNewList2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Nova Lista"
+        android:backgroundTint="#E14501"
+        android:textColor="#FFFFFF"
+        app:icon="@drawable/add"
+        app:iconTint="#FFFFFF"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="120dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+        android:id="@+id/btnNewList3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Nova Lista"
+        android:backgroundTint="#3C6939"
+        android:textColor="#FFFFFF"
+        app:icon="@drawable/add"
+        app:iconTint="#FFFFFF"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="202dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
