--- a/app/src/main/res/layout/bottom_sheet.xml
+++ b/app/src/main/res/layout/bottom_sheet.xml
@@ -35,6 +35,6 @@
         android:layout_marginTop="10dp"
         android:layout_marginBottom="20dp"
         android:text="Adicionar"
-        android:textColor="@color/md_theme_onSurface"/>
+        android:textColor="#FFFFFF"/>
 
 </LinearLayout>
