--- a/app/src/main/res/layout/card_item.xml
+++ b/app/src/main/res/layout/card_item.xml
@@ -32,6 +32,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Item"
+                android:textColor="@color/md_theme_onSurface"
                 android:textSize="20sp"
                 android:textStyle="bold"/>
         </LinearLayout>
