--- a/app/src/main/res/layout/card_list.xml
+++ b/app/src/main/res/layout/card_list.xml
@@ -27,6 +27,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Nome da lista"
+                android:textColor="@color/md_theme_onSurface"
                 android:layout_marginTop="10dp"
                 android:textSize="20sp"
                 android:textStyle="bold"/>
