--- a/app/src/main/res/layout/activity_cadastro.xml
+++ b/app/src/main/res/layout/activity_cadastro.xml
@@ -88,6 +88,7 @@
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btnCadastrar"
         android:background="@drawable/background_button"
+        app:backgroundTint="@color/md_theme_onPrimary"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
