--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -60,6 +60,7 @@
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btnLogin"
         android:background="@drawable/background_button"
+        app:backgroundTint="@color/md_theme_onPrimary"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="30dp"
