--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -86,5 +86,19 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
+    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+        android:id="@+id/btnNewList4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Nova Lista"
+        android:backgroundTint="@color/md_theme_onError"
+        android:textColor="#FFFFFF"
+        app:icon="@drawable/add"
+        app:iconTint="#FFFFFF"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="280dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
