--- a/app/src/main/res/layout/bottom_sheet.xml
+++ b/app/src/main/res/layout/bottom_sheet.xml
@@ -16,19 +16,21 @@
         android:layout_height="wrap_content"
         style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
         android:layout_marginHorizontal="20dp"
-        app:helperText=" ">
+        app:helperText=" "
+        android:backgroundTint="@color/md_theme_onSurface">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/editTextNewItem"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Adicione um novo item"/>
+            android:hint="Adicione um novo item" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btnAddNewItem"
         android:background="@drawable/background_button"
+        app:backgroundTint="@color/md_theme_onPrimary"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_marginHorizontal="20dp"
