--- a/app/src/main/res/layout/activity_recover_password.xml
+++ b/app/src/main/res/layout/activity_recover_password.xml
@@ -39,7 +39,8 @@
         android:layout_marginTop="32dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewTituloRecover">
+        app:layout_constraintTop_toBottomOf="@+id/textViewTituloRecover"
+        app:helperText=" ">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/editTextEmailRecover"
