--- a/app/src/main/res/layout/activity_cadastro.xml
+++ b/app/src/main/res/layout/activity_cadastro.xml
@@ -39,7 +39,8 @@
         android:layout_marginHorizontal="30dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewTituloCadastro">
+        app:layout_constraintTop_toBottomOf="@+id/textViewTituloCadastro"
+        app:helperText=" ">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/editTextNome"
@@ -56,7 +57,8 @@
         android:layout_marginHorizontal="30dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutNome">
+        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutNome"
+        app:helperText=" ">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/editTextCadastroEmail"
@@ -75,7 +77,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textInputLayoutCadastroEmail"
-        app:counterEnabled="true">
+        app:counterEnabled="true"
+        app:helperText=" ">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/editTextCadastroPassword"
