--- a/app/src/main/res/layout/card_list.xml
+++ b/app/src/main/res/layout/card_list.xml
@@ -42,7 +42,9 @@
         android:layout_height="wrap_content"
         android:src="@drawable/ellipsis_vertical_outline"
         android:backgroundTint="@android:color/transparent"
-        android:layout_marginTop="18dp"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="22dp"
         android:layout_gravity="end"/>
 
 </com.google.android.material.card.MaterialCardView>
