--- a/app/src/main/res/layout/activity_item.xml
+++ b/app/src/main/res/layout/activity_item.xml
@@ -38,6 +38,7 @@
         android:layout_marginTop="32dp"
         android:layout_marginEnd="20dp"
         android:backgroundTint="@android:color/transparent"
+        android:background="?attr/selectableItemBackgroundBorderless"
         android:padding="0dp"
         android:src="@drawable/ellipsis_vertical_outline"
         app:layout_constraintEnd_toEndOf="parent"
