--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,6 +27,7 @@
         android:layout_marginTop="24dp"
         android:layout_marginEnd="20dp"
         android:backgroundTint="@android:color/transparent"
+        android:background="?attr/selectableItemBackgroundBorderless"
         android:padding="0dp"
         android:src="@drawable/person_outline"
         app:layout_constraintEnd_toEndOf="parent"
