--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -77,6 +77,7 @@
         android:layout_marginStart="32dp"
         android:padding="0dp"
         android:src="@drawable/log_out_outline"
+        android:background="?attr/selectableItemBackgroundBorderless"
         android:textColor="@color/md_theme_onSurface"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewEditPassword" />
