--- a/app/src/main/res/layout/card_user.xml
+++ b/app/src/main/res/layout/card_user.xml
@@ -29,7 +29,7 @@
                 android:layout_marginTop="10dp"
                 android:text="Nome da usuário"
                 android:textColor="@color/md_theme_onSurface"
-                android:textSize="20sp"
+                android:textSize="22sp"
                 android:textStyle="bold" />
 
             <TextView
@@ -39,6 +39,7 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginStart="10dp"
                 android:text="Admin"
+                android:textSize="14dp"
                 android:textColor="@color/md_theme_primary" />
         </LinearLayout>
 
