--- a/app/src/main/res/layout/bottom_sheet.xml
+++ b/app/src/main/res/layout/bottom_sheet.xml
@@ -33,6 +33,7 @@
         app:backgroundTint="@color/md_theme_onPrimary"
         android:layout_width="match_parent"
         android:layout_height="50dp"
+        android:layout_gravity="end"
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="20dp"
