--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -45,6 +45,19 @@
         app:layout_constraintTop_toBottomOf="@+id/imageProfile" />
 
     <TextView
+        android:id="@+id/textViewEmail"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="3dp"
+        android:text="Email"
+        android:textSize="18dp"
+        android:textStyle="bold"
+        android:textColor="@color/md_theme_onSurface"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textViewName" />
+
+    <TextView
         android:id="@+id/textViewEditName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
