Adaptar bottom sheet do item

--- a/app/src/main/res/layout/bottom_sheet_list.xml
+++ b/app/src/main/res/layout/bottom_sheet_list.xml
@@ -5,7 +5,8 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:paddingHorizontal="16dp"
-    android:paddingBottom="20dp">
+    android:paddingBottom="20dp"
+    android:background="#121212">
 
     <com.google.android.material.bottomsheet.BottomSheetDragHandleView
         android:layout_width="match_parent"
