--- a/app/src/main/res/layout/bottom_shet_user.xml
+++ b/app/src/main/res/layout/bottom_shet_user.xml
@@ -5,7 +5,8 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:paddingHorizontal="16dp"
-    android:paddingBottom="20dp">
+    android:paddingBottom="20dp"
+    android:background="#121212">
 
     <com.google.android.material.bottomsheet.BottomSheetDragHandleView
         android:layout_width="match_parent"
@@ -21,7 +22,6 @@
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/editTextEmailUser"
-            android:inputType="textCapSentences"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
     </com.google.android.material.textfield.TextInputLayout>
