--- a/app/src/main/res/layout/card_item.xml
+++ b/app/src/main/res/layout/card_item.xml
@@ -3,17 +3,18 @@
     android:layout_width="match_parent"
     android:layout_height="60dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardCornerRadius="8dp"
     android:layout_marginVertical="8dp"
     android:layout_marginHorizontal="8dp"
-    android:backgroundTint="@color/material_on_surface_stroke"
-    app:strokeWidth="0dp">
+    app:cardCornerRadius="8dp"
+    app:cardBackgroundColor="@android:color/transparent"
+    app:strokeWidth="1dp"
+    app:strokeColor="@color/material_on_surface_stroke">
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="12dp"
-        android:layout_marginVertical="12dp"
+        android:layout_marginVertical="8dp"
+        android:layout_marginStart="8dp"
         android:orientation="vertical">
 
         <LinearLayout
@@ -25,7 +26,7 @@
             <CheckBox
                 android:id="@+id/checkBox"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content" />
 
             <TextView
                 android:id="@+id/textViewNameItem"
@@ -36,7 +37,6 @@
                 android:textSize="18sp"
                 android:textStyle="bold"/>
         </LinearLayout>
-
     </LinearLayout>
 
     <ImageButton
@@ -45,7 +45,8 @@
         android:layout_height="wrap_content"
         android:src="@drawable/close_outline"
         android:layout_gravity="end"
-        android:layout_margin="16dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginHorizontal="12dp"
         android:background="?attr/selectableItemBackgroundBorderless"/>
 
 </com.google.android.material.card.MaterialCardView>
